# IMCtermite

./: .gitignore  Dockerfile  LICENSE  README.md  check_markers.sh  eatall  eatit  eatraw  example.py  makefile  makefile-old  mycsv.csv  newmakefile  raw_eater.pxd  raw_eater.pyx  setup.py  setup_raw_meat.py  vs.csv
.github/: setup.sh
.github/workflows/: pypi-deploy.yml  wheels.yml
csv/: Temp_Disc_FR.csv  VehicleSpeed_HS.csv  myfile.csv  pressure_Vacuum.csv
cyt/: raw_eater.pxd  raw_eater.pyx  raw_meat.pxd  raw_meat.pyx
cython/: imc_termite.pxd  py_imc_termite.pyx  raw_eater.pxd  raw_eater.pyx  setup.py  setup_raw_eater.py  setup_raw_meat.py
doc/: Fileformat.md  deprecated.md
doc/matlab/: famos_import.m  import_famos.m
lib/: half_precision_floating_point.hpp  hexshow.hpp  imc_block.hpp  imc_channel.hpp  imc_conversion.hpp  imc_datatype.hpp  imc_key.hpp  imc_meta.hpp  imc_object.hpp  imc_objects.hpp  imc_parameter.hpp  imc_raw.hpp  imc_result.hpp  raweat.hpp  rawmerge.hpp
lib/parquet/: generate_deps.py  makefile  makefile.bkup  makefileobj  parquet-low-level-example  parquet_cpp_example.parquet  reader-writer.cc  (+2 more)
pip/: MANIFEST.in  makefile  setup.py
pyt/: example.py  numpy_to_pyarrow.py
python/: IMCtermite.pxd  IMCtermite.pyx  MANIFEST.in  example.py  imctermite.pyx  makefile  pyproject.toml  setup.cfg  setup.py  setup.sh  usage.py  usage_adv.py  usage_ext.py
python/examples/: multichannel.py  usage.py  usage_adv.py  usage_ext.py  usage_files.py
raw/: VehicleSpeed_HS.asc
sample/: pressure_Vacuum.asc
samples/: exampleA-20230124.raw  exampleA.raw  exampleB-20230124.raw  exampleB.raw  exampleC-20230124.raw  sampleA.raw
shell/: check_markers.sh
smp/: exampleA.raw  exampleB.raw
src/: eatall.cpp  endian.hpp  main.cpp  main_dev.cpp  newmain.cpp  raweat.hpp
(+100 files in other folders)
