
[metadata]
name = IMCtermite
description = Enables extraction of measurement data from binary files with extension 'raw' used by proprietary software imcFAMOS/imcSTUDIO and facilitates its storage in open source file formats
long_description = file: README.md
version = file: VERSION
author = Record Evolution GmbH
author_email = mario.fink@record-evolution.de
maintainer = Record Evolution GmbH
url= https://github.com/RecordEvolution/IMCtermite.git
license = MIT License
license_files = LICENSE
keywords = IMC, raw, imcFAMOS, imcSTUDIO, imcCRONOS
classifiers =
  Programming Language :: Python :: 3,
  License :: OSI Approved :: MIT License,
  Operating System :: OS Independent
  Topic :: Scientific/Engineering
  Topic :: Software Development :: Libraries :: Python Modules

[options]
